# fs-reader

./: .gitignore  CMakeLists.txt  README.md
dependencies/: apt.txt  conanfile.txt  homebrew.txt
inc/: EXT2.h  FAT16.h
src/: ext2.cpp  fat16.cpp  main.cpp
